Armando el html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 	<title></title>
 </head>
 <body>
-
+<header>
+	
+</header>
+<section class="tv-show">
+	<div class="left">
+		<img src="#">
+	</div>
+	<div class="left info">
+		<h1></h1>
+		<p></p>
+	</div>
+</section>
 </body>
 </html>
