Continuando con el armado del html

--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<title>TV Place</title>
+	<meta charset="UTF-8">
+	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 <body>
-<header>
-	
-</header>
-<section class="tv-show">
-	<div class="left">
-		<img src="#">
+	<div id="app-container">
+		<header>
+			<h1>TV Place</h1>
+		</header>
+		<section id="app-body">
+			<div class="tv-shows">
+				<article class="tv-show">
+					<div class="left">
+						<img src="http://tvmazecdn.com/uploads/images/medium_portrait/41/104633.jpg">
+					</div>
+					<div class="left info">
+						<h1></h1>
+						<p></p>
+					</div>
+				</article>
+			</div>
+		</section>
 	</div>
-	<div class="left info">
-		<h1></h1>
-		<p></p>
-	</div>
-</section>
 </body>
 </html>
