Agregando estilo y modificando html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TV Place</title>
 	<meta charset="UTF-8">
-	<link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<title>TV Place</title>
+	<link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -14,7 +15,9 @@
 		<section id="app-body">
 			<form class="search-form">
 				<input type="text">
-		        <button type="submit">Buscar</button>
+				<div>
+		        	<button type="submit">Buscar</button>
+				</div>
 	    	</form>
 	    	<div class="tv-shows">
 	        	<div class="loader"></div>
@@ -24,7 +27,7 @@
 	    	<p>HTML5 - CSS3 - Jquery</p>
 	    </footer>
 	</div>
-<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
-<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="https://code.jquery.com/jquery-2.1.4.js"></script>
+	<script type="text/javascript" src="js/script.js"></script>
 </body>
 </html>
