--- a/index.html
+++ b/index.html
@@ -5,20 +5,39 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<link href='https://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
 	<div id="app-container">
 		<header id="app-header">
-			<h1>TV Place</h1>
-		</header>
-		<section id="app-body">
-			<form class="search-form">
-				<input type="text">
-				<div>
-		        	<button type="submit">Buscar</button>
-				</div>
+			<h1 class="superior">TV Place</h1>
+			<form class="search-form input-group">
+				<input type="text" class="form-control" placeholder="Search">
+				<span class="input-group-btn">
+		        	<button class="btn btn-default" type="submit">Go</button>
+				</span>
 	    	</form>
+		</header>
+		<section id="app-nav">
+			<nav>
+				<ul>
+		    		<li>
+		    			<a href="#">Home</a>
+		    		</li>
+		    		<li>
+		    			<a href="#">Shows</a>
+		    		</li>
+		    		<li>
+		    			<a href="#">People</a>
+		    		</li>
+		    		<li>
+		    			<a href="#">Schedule</a>
+		    		</li>
+		    	</ul>
+			</nav>
+		</section>
+		<section id="app-body">
 	    	<div class="tv-shows">
 	        	<div class="loader"></div>
 	    	</div>
