--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<nav>
 				<ul>
 		    		<li>
-		    			<a href="#">Home</a>
+		    			<a href="/index.html">Home</a>
 		    		</li>
 		    		<li>
 		    			<a href="#">Shows</a>
